cabal-version: 2.2

name:           aoc2020
version:        0.1.0.0
description:    Advent of Code 2020 in Haskell
homepage:       https://github.com/czwinzscher/advent-of-code-2020
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md

common common-options
  build-depends:
      base >=4.7 && <5
  default-language: Haskell2010
  default-extensions:
      FlexibleContexts
      FlexibleInstances
      InstanceSigs
      LambdaCase
      MultiWayIf
      RecordWildCards
      TupleSections
      OverloadedStrings
      ScopedTypeVariables
      GADTs
      NumericUnderscores
      DeriveFunctor
      DeriveFoldable
      BangPatterns
  ghc-options:
      -Wall
      -Wincomplete-uni-patterns
      -Wincomplete-record-updates
      -Widentities
      -Wredundant-constraints
      -Wpartial-fields
      -Wcompat
  if impl(ghc >= 8.10)
      ghc-options:
          - -Wunused-packages

library
  import: common-options
  exposed-modules:
      Days.Day01
      Days.Day02
      Days.Day03
      Days.Day04
      Days.Day05
      Days.Day06
      Days.Day07
      Days.Day08
      Days.Day09
      Days.Day10
      Days.Day11
      Days.Day12
      Days.Day13
      Days.Day14
      Days.Day15
      Days.Day16
      Days.Day17
      Days.Day18
      Days.Day19
      Days.Day20
      Days.Day21
      Days.Day22
      Days.Day23
      Days.Day24
      Days.Day25
      Program.RunDay
      Util.Parsers
      Util.Util
  other-modules:
      Paths_aoc2020
  hs-source-dirs:
      src
  build-depends:
      attoparsec
    , containers
    , mtl
    , text
    , vector

executable aoc2020-exe
  import: common-options
  main-is: Main.hs
  other-modules:
      Paths_aoc2020
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      aoc2020
    , containers
    , optparse-applicative

benchmark mainbench
  import: common-options
  type: exitcode-stdio-1.0
  hs-source-dirs: benchmark
  main-is: Bench.hs
  other-modules:
      Bench.BenchDay
      Bench.Day01
      Bench.Day02
      Bench.Day03
      Bench.Day04
      Bench.Day05
      Bench.Day06
      Bench.Day07
      Bench.Day08
      Bench.Day09
      Bench.Day10
      Bench.Day12
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      aoc2020
    , attoparsec
    , containers
    , criterion
    , text